@@ -1,5 +1,1 @@
 # TODO
-
-## Retweeted text
-
-Use retweeted text from `retweeted_status` property.
